// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conflict versions 1`] = `
{
  "linux": [],
}
`;

exports[`conflict versions 2`] = `
{
  "files": {
    "index.html": {
      "offset": "9018",
      "size": 841,
    },
    "index.js": {
      "offset": "9859",
      "size": 2501,
    },
    "node_modules": {
      "files": {
        "foo": {
          "files": {
            "node_modules": {
              "files": {
                "ms": {
                  "files": {
                    "index.js": {
                      "offset": "127",
                      "size": 2764,
                    },
                    "license.md": {
                      "offset": "2891",
                      "size": 1077,
                    },
                    "package.json": {
                      "offset": "3968",
                      "size": 469,
                    },
                  },
                },
              },
            },
            "package.json": {
              "offset": "0",
              "size": 127,
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": "4437",
              "size": 3034,
            },
            "license.md": {
              "offset": "7471",
              "size": 1077,
            },
            "package.json": {
              "offset": "8548",
              "size": 470,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "12360",
      "size": 301,
    },
  },
}
`;

exports[`yarn several workspaces 1`] = `
{
  "linux": [],
}
`;

exports[`yarn several workspaces 2`] = `
{
  "files": {
    "index.html": {
      "offset": "19187",
      "size": 841,
    },
    "index.js": {
      "offset": "20028",
      "size": 2501,
    },
    "node_modules": {
      "files": {
        "electron-log": {
          "files": {
            "LICENSE": {
              "offset": "0",
              "size": 1082,
            },
            "index.js": {
              "offset": "1082",
              "size": 140,
            },
            "lib": {
              "files": {
                "format.js": {
                  "offset": "1222",
                  "size": 1021,
                },
                "log.js": {
                  "offset": "2243",
                  "size": 877,
                },
                "transports": {
                  "files": {
                    "console.js": {
                      "offset": "3120",
                      "size": 343,
                    },
                    "file": {
                      "files": {
                        "find-log-path.js": {
                          "offset": "3463",
                          "size": 2078,
                        },
                        "get-app-name.js": {
                          "offset": "5541",
                          "size": 1780,
                        },
                        "index.js": {
                          "offset": "7321",
                          "size": 2068,
                        },
                      },
                    },
                    "log-s.js": {
                      "offset": "9389",
                      "size": 1751,
                    },
                    "renderer-console.js": {
                      "offset": "11140",
                      "size": 544,
                    },
                  },
                },
              },
            },
            "main.js": {
              "offset": "11684",
              "size": 1343,
            },
            "package.json": {
              "offset": "13027",
              "size": 745,
            },
            "renderer.js": {
              "offset": "13772",
              "size": 978,
            },
          },
        },
        "foo": {
          "files": {
            "package.json": {
              "offset": "14750",
              "size": 127,
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": "14877",
              "size": 2764,
            },
            "license.md": {
              "offset": "17641",
              "size": 1077,
            },
            "package.json": {
              "offset": "18718",
              "size": 469,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "22529",
      "size": 326,
    },
  },
}
`;

exports[`yarn several workspaces and asarUnpack 1`] = `
{
  "linux": [],
}
`;

exports[`yarn several workspaces and asarUnpack 2`] = `
{
  "files": {
    "index.html": {
      "offset": "14877",
      "size": 841,
    },
    "index.js": {
      "offset": "15718",
      "size": 2501,
    },
    "node_modules": {
      "files": {
        "electron-log": {
          "files": {
            "LICENSE": {
              "offset": "0",
              "size": 1082,
            },
            "index.js": {
              "offset": "1082",
              "size": 140,
            },
            "lib": {
              "files": {
                "format.js": {
                  "offset": "1222",
                  "size": 1021,
                },
                "log.js": {
                  "offset": "2243",
                  "size": 877,
                },
                "transports": {
                  "files": {
                    "console.js": {
                      "offset": "3120",
                      "size": 343,
                    },
                    "file": {
                      "files": {
                        "find-log-path.js": {
                          "offset": "3463",
                          "size": 2078,
                        },
                        "get-app-name.js": {
                          "offset": "5541",
                          "size": 1780,
                        },
                        "index.js": {
                          "offset": "7321",
                          "size": 2068,
                        },
                      },
                    },
                    "log-s.js": {
                      "offset": "9389",
                      "size": 1751,
                    },
                    "renderer-console.js": {
                      "offset": "11140",
                      "size": 544,
                    },
                  },
                },
              },
            },
            "main.js": {
              "offset": "11684",
              "size": 1343,
            },
            "package.json": {
              "offset": "13027",
              "size": 745,
            },
            "renderer.js": {
              "offset": "13772",
              "size": 978,
            },
          },
        },
        "foo": {
          "files": {
            "package.json": {
              "offset": "14750",
              "size": 127,
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "size": 2764,
              "unpacked": true,
            },
            "license.md": {
              "size": 1077,
              "unpacked": true,
            },
            "package.json": {
              "size": 469,
              "unpacked": true,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "18219",
      "size": 326,
    },
  },
}
`;

exports[`yarn two package.json w/ native module 1`] = `
{
  "linux": [],
}
`;

exports[`yarn two package.json w/ native module 2`] = `
{
  "files": {
    "index.html": {
      "offset": "1091129",
      "size": 841,
    },
    "index.js": {
      "offset": "1091970",
      "size": 2501,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": "0",
              "size": 1107,
            },
            "dist": {
              "files": {
                "debug.js": {
                  "offset": "1107",
                  "size": 27572,
                },
              },
            },
            "package.json": {
              "offset": "28679",
              "size": 947,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": "29626",
                  "size": 5831,
                },
                "common.js": {
                  "offset": "35457",
                  "size": 5930,
                },
                "index.js": {
                  "offset": "41387",
                  "size": 314,
                },
                "node.js": {
                  "offset": "41701",
                  "size": 4475,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": "46176",
              "size": 3024,
            },
            "license.md": {
              "offset": "49200",
              "size": 1079,
            },
            "package.json": {
              "offset": "50279",
              "size": 497,
            },
          },
        },
        "node-addon-api": {
          "files": {
            "LICENSE.md": {
              "offset": "50776",
              "size": 1150,
            },
            "common.gypi": {
              "offset": "51926",
              "size": 724,
            },
            "except.gypi": {
              "offset": "52650",
              "size": 560,
            },
            "index.js": {
              "offset": "53210",
              "size": 377,
            },
            "napi-inl.deprecated.h": {
              "offset": "53587",
              "size": 6323,
            },
            "napi-inl.h": {
              "offset": "59910",
              "size": 219411,
            },
            "napi.h": {
              "offset": "279321",
              "size": 115423,
            },
            "node_addon_api.gyp": {
              "offset": "394744",
              "size": 793,
            },
            "node_api.gyp": {
              "offset": "395537",
              "size": 132,
            },
            "noexcept.gypi": {
              "offset": "395669",
              "size": 639,
            },
            "nothing.c": {
              "offset": "396308",
              "size": 0,
            },
            "package-support.json": {
              "offset": "396308",
              "size": 467,
            },
            "package.json": {
              "offset": "396775",
              "size": 928,
            },
            "tools": {
              "files": {
                "README.md": {
                  "offset": "397703",
                  "size": 3217,
                },
                "check-napi.js": {
                  "offset": "400920",
                  "size": 3176,
                },
                "clang-format.js": {
                  "offset": "404096",
                  "size": 2002,
                },
                "conversion.js": {
                  "executable": true,
                  "offset": "406098",
                  "size": 15013,
                },
                "eslint-format.js": {
                  "offset": "421111",
                  "size": 2071,
                },
              },
            },
          },
        },
        "node-pty": {
          "files": {
            "LICENSE": {
              "offset": "423182",
              "size": 3326,
            },
            "build": {
              "files": {
                "Release": {
                  "files": {
                    "pty.node": {
                      "executable": true,
                      "offset": "1018249",
                      "size": 72880,
                    },
                  },
                },
              },
            },
            "deps": {
              "files": {
                ".editorconfig": {
                  "offset": "426508",
                  "size": 55,
                },
                "winpty": {
                  "files": {
                    ".drone.yml": {
                      "offset": "426563",
                      "size": 439,
                    },
                    "LICENSE": {
                      "offset": "427002",
                      "size": 1085,
                    },
                    "Makefile": {
                      "offset": "428087",
                      "size": 4722,
                    },
                    "README.md": {
                      "offset": "432809",
                      "size": 5551,
                    },
                    "RELEASES.md": {
                      "offset": "438360",
                      "size": 13667,
                    },
                    "VERSION.txt": {
                      "offset": "452027",
                      "size": 10,
                    },
                    "configure": {
                      "offset": "452037",
                      "size": 6478,
                    },
                    "misc": {
                      "files": {
                        "ConinMode.ps1": {
                          "offset": "458515",
                          "size": 3228,
                        },
                        "DebugClient.py": {
                          "offset": "461743",
                          "size": 1558,
                        },
                        "DebugServer.py": {
                          "offset": "463301",
                          "size": 2396,
                        },
                        "DumpLines.py": {
                          "offset": "465697",
                          "size": 97,
                        },
                        "EnableExtendedFlags.txt": {
                          "offset": "465794",
                          "size": 1974,
                        },
                        "Font-Report-June2016": {
                          "files": {
                            "CP437-Consolas.txt": {
                              "offset": "467768",
                              "size": 16408,
                            },
                            "CP437-Lucida.txt": {
                              "offset": "484176",
                              "size": 19641,
                            },
                            "CP932.txt": {
                              "offset": "503817",
                              "size": 19593,
                            },
                            "CP936.txt": {
                              "offset": "523410",
                              "size": 19650,
                            },
                            "CP949.txt": {
                              "offset": "543060",
                              "size": 19588,
                            },
                            "CP950.txt": {
                              "offset": "562648",
                              "size": 19656,
                            },
                            "MinimumWindowWidths.txt": {
                              "offset": "582304",
                              "size": 870,
                            },
                            "Results.txt": {
                              "offset": "583174",
                              "size": 147,
                            },
                            "Windows10SetFontBugginess.txt": {
                              "offset": "583321",
                              "size": 7851,
                            },
                          },
                        },
                        "FormatChar.h": {
                          "offset": "591172",
                          "size": 529,
                        },
                        "IdentifyConsoleWindow.ps1": {
                          "offset": "591701",
                          "size": 1952,
                        },
                        "MouseInputNotes.txt": {
                          "offset": "593653",
                          "size": 4325,
                        },
                        "Notes.txt": {
                          "offset": "597978",
                          "size": 9856,
                        },
                        "Spew.py": {
                          "offset": "607834",
                          "size": 65,
                        },
                        "build32.sh": {
                          "offset": "607899",
                          "size": 213,
                        },
                        "build64.sh": {
                          "offset": "608112",
                          "size": 217,
                        },
                        "color-test.sh": {
                          "offset": "608329",
                          "size": 6068,
                        },
                        "font-notes.txt": {
                          "offset": "614397",
                          "size": 14988,
                        },
                      },
                    },
                    "ship": {
                      "files": {
                        "build-pty4j-libpty.bat": {
                          "offset": "629385",
                          "size": 1230,
                        },
                        "common_ship.py": {
                          "offset": "630615",
                          "size": 1698,
                        },
                        "make_msvc_package.py": {
                          "offset": "632313",
                          "size": 5415,
                        },
                        "ship.py": {
                          "offset": "637728",
                          "size": 4022,
                        },
                      },
                    },
                    "src": {
                      "files": {
                        "agent": {
                          "files": {
                            "Agent.h": {
                              "offset": "641750",
                              "size": 3520,
                            },
                            "AgentCreateDesktop.h": {
                              "offset": "645270",
                              "size": 1283,
                            },
                            "ConsoleFont.h": {
                              "offset": "646553",
                              "size": 1266,
                            },
                            "ConsoleInput.h": {
                              "offset": "647819",
                              "size": 3950,
                            },
                            "ConsoleInputReencoding.h": {
                              "offset": "651769",
                              "size": 1444,
                            },
                            "ConsoleLine.h": {
                              "offset": "653213",
                              "size": 1524,
                            },
                            "Coord.h": {
                              "offset": "654737",
                              "size": 2204,
                            },
                            "DebugShowInput.h": {
                              "offset": "656941",
                              "size": 1434,
                            },
                            "DefaultInputMap.h": {
                              "offset": "658375",
                              "size": 1271,
                            },
                            "DsrSender.h": {
                              "offset": "659646",
                              "size": 1242,
                            },
                            "EventLoop.h": {
                              "offset": "660888",
                              "size": 1603,
                            },
                            "InputMap.h": {
                              "offset": "662491",
                              "size": 3369,
                            },
                            "LargeConsoleRead.h": {
                              "offset": "665860",
                              "size": 2411,
                            },
                            "NamedPipe.h": {
                              "offset": "668271",
                              "size": 4130,
                            },
                            "Scraper.h": {
                              "offset": "672401",
                              "size": 3760,
                            },
                            "SimplePool.h": {
                              "offset": "676161",
                              "size": 2365,
                            },
                            "SmallRect.h": {
                              "offset": "678526",
                              "size": 4437,
                            },
                            "Terminal.h": {
                              "offset": "682963",
                              "size": 2262,
                            },
                            "UnicodeEncoding.h": {
                              "offset": "685225",
                              "size": 5298,
                            },
                            "Win32Console.h": {
                              "offset": "690523",
                              "size": 2347,
                            },
                            "Win32ConsoleBuffer.h": {
                              "offset": "692870",
                              "size": 3244,
                            },
                          },
                        },
                        "configurations.gypi": {
                          "offset": "696114",
                          "size": 2378,
                        },
                        "include": {
                          "files": {
                            "winpty.h": {
                              "offset": "698492",
                              "size": 9420,
                            },
                            "winpty_constants.h": {
                              "offset": "707912",
                              "size": 5697,
                            },
                          },
                        },
                        "libwinpty": {
                          "files": {
                            "AgentLocation.h": {
                              "offset": "713609",
                              "size": 1278,
                            },
                            "LibWinptyException.h": {
                              "offset": "714887",
                              "size": 1961,
                            },
                            "WinptyInternal.h": {
                              "offset": "716848",
                              "size": 2379,
                            },
                          },
                        },
                        "shared": {
                          "files": {
                            "AgentMsg.h": {
                              "offset": "719227",
                              "size": 1418,
                            },
                            "BackgroundDesktop.h": {
                              "offset": "720645",
                              "size": 2836,
                            },
                            "Buffer.h": {
                              "offset": "723481",
                              "size": 3376,
                            },
                            "DebugClient.h": {
                              "offset": "726857",
                              "size": 1696,
                            },
                            "GenRandom.h": {
                              "offset": "728553",
                              "size": 2015,
                            },
                            "GetCommitHash.bat": {
                              "offset": "730568",
                              "size": 274,
                            },
                            "Mutex.h": {
                              "offset": "730842",
                              "size": 2183,
                            },
                            "OsModule.h": {
                              "offset": "733025",
                              "size": 2282,
                            },
                            "OwnedHandle.h": {
                              "offset": "735307",
                              "size": 1870,
                            },
                            "PrecompiledHeader.h": {
                              "offset": "737177",
                              "size": 1528,
                            },
                            "StringBuilder.h": {
                              "offset": "738705",
                              "size": 8506,
                            },
                            "StringUtil.h": {
                              "offset": "747211",
                              "size": 2677,
                            },
                            "TimeMeasurement.h": {
                              "offset": "749888",
                              "size": 2171,
                            },
                            "UnixCtrlChars.h": {
                              "offset": "752059",
                              "size": 2019,
                            },
                            "UpdateGenVersion.bat": {
                              "offset": "754078",
                              "size": 578,
                            },
                            "WindowsSecurity.h": {
                              "offset": "754656",
                              "size": 3465,
                            },
                            "WindowsVersion.h": {
                              "offset": "758121",
                              "size": 1345,
                            },
                            "WinptyAssert.h": {
                              "offset": "759466",
                              "size": 2829,
                            },
                            "WinptyException.h": {
                              "offset": "762295",
                              "size": 1643,
                            },
                            "WinptyVersion.h": {
                              "offset": "763938",
                              "size": 1246,
                            },
                            "winpty_snprintf.h": {
                              "offset": "765184",
                              "size": 3668,
                            },
                          },
                        },
                        "unix-adapter": {
                          "files": {
                            "InputHandler.h": {
                              "offset": "768852",
                              "size": 2058,
                            },
                            "OutputHandler.h": {
                              "offset": "770910",
                              "size": 1943,
                            },
                            "Util.h": {
                              "offset": "772853",
                              "size": 1410,
                            },
                            "WakeupFd.h": {
                              "offset": "774263",
                              "size": 1549,
                            },
                          },
                        },
                        "winpty.gyp": {
                          "offset": "775812",
                          "size": 7684,
                        },
                      },
                    },
                    "vcbuild.bat": {
                      "offset": "783496",
                      "size": 2425,
                    },
                  },
                },
              },
            },
            "lib": {
              "files": {
                "conpty_console_list_agent.js": {
                  "offset": "785921",
                  "size": 775,
                },
                "conpty_console_list_agent.js.map": {
                  "offset": "786696",
                  "size": 564,
                },
                "eventEmitter2.js": {
                  "offset": "787260",
                  "size": 1600,
                },
                "eventEmitter2.js.map": {
                  "offset": "788860",
                  "size": 1155,
                },
                "eventEmitter2.test.js": {
                  "offset": "790015",
                  "size": 1266,
                },
                "eventEmitter2.test.js.map": {
                  "offset": "791281",
                  "size": 1396,
                },
                "index.js": {
                  "offset": "792677",
                  "size": 1972,
                },
                "index.js.map": {
                  "offset": "794649",
                  "size": 964,
                },
                "interfaces.js": {
                  "offset": "795613",
                  "size": 233,
                },
                "interfaces.js.map": {
                  "offset": "795846",
                  "size": 124,
                },
                "shared": {
                  "files": {
                    "conout.js": {
                      "offset": "795970",
                      "size": 348,
                    },
                    "conout.js.map": {
                      "offset": "796318",
                      "size": 204,
                    },
                  },
                },
                "terminal.js": {
                  "offset": "796522",
                  "size": 7454,
                },
                "terminal.js.map": {
                  "offset": "803976",
                  "size": 5844,
                },
                "terminal.test.js": {
                  "offset": "809820",
                  "size": 6250,
                },
                "terminal.test.js.map": {
                  "offset": "816070",
                  "size": 4150,
                },
                "testUtils.test.js": {
                  "offset": "820220",
                  "size": 807,
                },
                "testUtils.test.js.map": {
                  "offset": "821027",
                  "size": 622,
                },
                "types.js": {
                  "offset": "821649",
                  "size": 228,
                },
                "types.js.map": {
                  "offset": "821877",
                  "size": 114,
                },
                "unixTerminal.js": {
                  "offset": "821991",
                  "size": 10231,
                },
                "unixTerminal.js.map": {
                  "offset": "832222",
                  "size": 7978,
                },
                "unixTerminal.test.js": {
                  "offset": "840200",
                  "size": 19444,
                },
                "unixTerminal.test.js.map": {
                  "offset": "859644",
                  "size": 11472,
                },
                "utils.js": {
                  "offset": "871116",
                  "size": 580,
                },
                "utils.js.map": {
                  "offset": "871696",
                  "size": 443,
                },
                "windowsConoutConnection.js": {
                  "offset": "872139",
                  "size": 6017,
                },
                "windowsConoutConnection.js.map": {
                  "offset": "878156",
                  "size": 1593,
                },
                "windowsPtyAgent.js": {
                  "offset": "879749",
                  "size": 12461,
                },
                "windowsPtyAgent.js.map": {
                  "offset": "892210",
                  "size": 8889,
                },
                "windowsPtyAgent.test.js": {
                  "offset": "901099",
                  "size": 4147,
                },
                "windowsPtyAgent.test.js.map": {
                  "offset": "905246",
                  "size": 2951,
                },
                "windowsTerminal.js": {
                  "offset": "908197",
                  "size": 7988,
                },
                "windowsTerminal.js.map": {
                  "offset": "916185",
                  "size": 5127,
                },
                "windowsTerminal.test.js": {
                  "offset": "921312",
                  "size": 9832,
                },
                "windowsTerminal.test.js.map": {
                  "offset": "931144",
                  "size": 8006,
                },
                "worker": {
                  "files": {
                    "conoutSocketWorker.js": {
                      "offset": "939150",
                      "size": 848,
                    },
                    "conoutSocketWorker.js.map": {
                      "offset": "939998",
                      "size": 638,
                    },
                  },
                },
              },
            },
            "package.json": {
              "offset": "940636",
              "size": 884,
            },
            "scripts": {
              "files": {
                "post-install.js": {
                  "offset": "941520",
                  "size": 1213,
                },
                "publish.js": {
                  "offset": "942733",
                  "size": 2369,
                },
              },
            },
            "src": {
              "files": {
                "conpty_console_list_agent.ts": {
                  "offset": "945102",
                  "size": 696,
                },
                "eventEmitter2.test.ts": {
                  "offset": "945798",
                  "size": 975,
                },
                "eventEmitter2.ts": {
                  "offset": "946773",
                  "size": 1111,
                },
                "index.ts": {
                  "offset": "947884",
                  "size": 2115,
                },
                "interfaces.ts": {
                  "offset": "949999",
                  "size": 2845,
                },
                "shared": {
                  "files": {
                    "conout.ts": {
                      "offset": "952844",
                      "size": 291,
                    },
                  },
                },
                "terminal.test.ts": {
                  "offset": "953135",
                  "size": 4346,
                },
                "terminal.ts": {
                  "offset": "957481",
                  "size": 6665,
                },
                "testUtils.test.ts": {
                  "offset": "964146",
                  "size": 567,
                },
                "tsconfig.json": {
                  "offset": "964713",
                  "size": 323,
                },
                "types.ts": {
                  "offset": "965036",
                  "size": 306,
                },
                "unixTerminal.test.ts": {
                  "offset": "965342",
                  "size": 13205,
                },
                "unixTerminal.ts": {
                  "offset": "978547",
                  "size": 8195,
                },
                "utils.ts": {
                  "offset": "986742",
                  "size": 292,
                },
                "win": {
                  "files": {
                    "path_util.h": {
                      "offset": "987034",
                      "size": 695,
                    },
                  },
                },
                "windowsConoutConnection.ts": {
                  "offset": "987729",
                  "size": 2683,
                },
                "windowsPtyAgent.test.ts": {
                  "offset": "990412",
                  "size": 3419,
                },
                "windowsPtyAgent.ts": {
                  "offset": "993831",
                  "size": 10359,
                },
                "windowsTerminal.test.ts": {
                  "offset": "1004190",
                  "size": 7551,
                },
                "windowsTerminal.ts": {
                  "offset": "1011741",
                  "size": 5784,
                },
                "worker": {
                  "files": {
                    "conoutSocketWorker.ts": {
                      "offset": "1017525",
                      "size": 724,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "1094471",
      "size": 266,
    },
  },
}
`;

exports[`yarn workspace 1`] = `
{
  "linux": [],
}
`;

exports[`yarn workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": "137310",
      "size": 841,
    },
    "index.js": {
      "offset": "138151",
      "size": 2501,
    },
    "node_modules": {
      "files": {
        "@sentry": {
          "files": {
            "core": {
              "files": {
                "LICENSE": {
                  "offset": "0",
                  "size": 1527,
                },
                "dist": {
                  "files": {
                    "base.js": {
                      "offset": "1527",
                      "size": 17489,
                    },
                    "base.js.map": {
                      "offset": "19016",
                      "size": 16432,
                    },
                    "dsn.js": {
                      "offset": "35448",
                      "size": 4214,
                    },
                    "dsn.js.map": {
                      "offset": "39662",
                      "size": 5742,
                    },
                    "error.js": {
                      "offset": "45404",
                      "size": 1180,
                    },
                    "error.js.map": {
                      "offset": "46584",
                      "size": 844,
                    },
                    "index.js": {
                      "offset": "47428",
                      "size": 475,
                    },
                    "index.js.map": {
                      "offset": "47903",
                      "size": 589,
                    },
                    "interfaces.js": {
                      "offset": "48492",
                      "size": 649,
                    },
                    "interfaces.js.map": {
                      "offset": "49141",
                      "size": 11257,
                    },
                    "sdk.js": {
                      "offset": "60398",
                      "size": 1039,
                    },
                    "sdk.js.map": {
                      "offset": "61437",
                      "size": 1554,
                    },
                    "status.js": {
                      "offset": "62991",
                      "size": 1630,
                    },
                    "status.js.map": {
                      "offset": "64621",
                      "size": 2118,
                    },
                  },
                },
                "package.json": {
                  "offset": "66739",
                  "size": 766,
                },
              },
            },
            "shim": {
              "files": {
                "LICENSE": {
                  "offset": "67505",
                  "size": 1527,
                },
                "dist": {
                  "files": {
                    "domain.js": {
                      "offset": "69032",
                      "size": 672,
                    },
                    "domain.js.map": {
                      "offset": "69704",
                      "size": 1230,
                    },
                    "global.js": {
                      "offset": "70934",
                      "size": 500,
                    },
                    "global.js.map": {
                      "offset": "71434",
                      "size": 906,
                    },
                    "index.js": {
                      "offset": "72340",
                      "size": 826,
                    },
                    "index.js.map": {
                      "offset": "73166",
                      "size": 920,
                    },
                    "interfaces.js": {
                      "offset": "74086",
                      "size": 115,
                    },
                    "interfaces.js.map": {
                      "offset": "74201",
                      "size": 501,
                    },
                    "models.js": {
                      "offset": "74702",
                      "size": 522,
                    },
                    "models.js.map": {
                      "offset": "75224",
                      "size": 2711,
                    },
                    "sdk.js": {
                      "offset": "77935",
                      "size": 7245,
                    },
                    "sdk.js.map": {
                      "offset": "85180",
                      "size": 10056,
                    },
                    "shim.js": {
                      "offset": "95236",
                      "size": 4438,
                    },
                    "shim.js.map": {
                      "offset": "99674",
                      "size": 6607,
                    },
                  },
                },
                "jest.config.js": {
                  "offset": "106281",
                  "size": 265,
                },
                "package.json": {
                  "offset": "106546",
                  "size": 705,
                },
                "src": {
                  "files": {
                    "domain.ts": {
                      "offset": "107251",
                      "size": 630,
                    },
                    "global.ts": {
                      "offset": "107881",
                      "size": 510,
                    },
                    "index.ts": {
                      "offset": "108391",
                      "size": 421,
                    },
                    "interfaces.ts": {
                      "offset": "108812",
                      "size": 352,
                    },
                    "models.ts": {
                      "offset": "109164",
                      "size": 2213,
                    },
                    "sdk.ts": {
                      "offset": "111377",
                      "size": 6858,
                    },
                    "shim.ts": {
                      "offset": "118235",
                      "size": 3831,
                    },
                  },
                },
                "tsconfig.build.json": {
                  "offset": "122066",
                  "size": 160,
                },
                "tsconfig.json": {
                  "offset": "122226",
                  "size": 244,
                },
                "tslint.json": {
                  "offset": "122470",
                  "size": 90,
                },
              },
            },
          },
        },
        "electron-log": {
          "files": {
            "LICENSE": {
              "offset": "122560",
              "size": 1082,
            },
            "index.js": {
              "offset": "123642",
              "size": 140,
            },
            "lib": {
              "files": {
                "format.js": {
                  "offset": "123782",
                  "size": 1021,
                },
                "log.js": {
                  "offset": "124803",
                  "size": 877,
                },
                "transports": {
                  "files": {
                    "console.js": {
                      "offset": "125680",
                      "size": 343,
                    },
                    "file": {
                      "files": {
                        "find-log-path.js": {
                          "offset": "126023",
                          "size": 2078,
                        },
                        "get-app-name.js": {
                          "offset": "128101",
                          "size": 1780,
                        },
                        "index.js": {
                          "offset": "129881",
                          "size": 2068,
                        },
                      },
                    },
                    "log-s.js": {
                      "offset": "131949",
                      "size": 1751,
                    },
                    "renderer-console.js": {
                      "offset": "133700",
                      "size": 544,
                    },
                  },
                },
              },
            },
            "main.js": {
              "offset": "134244",
              "size": 1343,
            },
            "package.json": {
              "offset": "135587",
              "size": 745,
            },
            "renderer.js": {
              "offset": "136332",
              "size": 978,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "140652",
      "size": 380,
    },
  },
}
`;
